# small-data-sets

./: blueripple-small-data-sets.cabal  cabal.project
data/campaign-finance/: allHouseSpendingThrough20200827.csv  allMoney_20200902.csv  allMoney_20201004.csv  allMoney_20220119.csv  allSenateSpendingThrough20200827.csv  senateMoney_20220119.csv
data/demographic/: PRRI_religion_2023.csv  ageSexRaceDemographics2010-2018.csv  populationsByCounty.csv  puma2000ToCD116.csv  puma2012ToCD116.csv
data/dictionaries/: 2010CountyToCD116.csv  2010StateCountyTractPUMA.csv  2012PUMATo2014County.csv  StateCounty116CD.csv  StateLower2016FromPUMA.csv  StateUpper2016FromPUMA.csv  cd113FromPUMA2012.csv  cd114FromPUMA2012.csv  cd115FromPUMA2012.csv  cd116FromPUMA2012.csv  cd116FromStateLower2016.csv  cd116FromStateUpper2016.csv  cd117FromPUMA2012.csv  cd117FromPUMA2020.csv  cd118FromPUMA2012.csv  cd118FromPUMA2020.csv  puma2010ToCD116.csv  puma2012Tocd116.csv  states.csv
data/election/: 1976-2016-president.csv  1976-2018-house.csv  1976-2018-house_v5.csv  1976-2018-house_v5_u1.csv  1976-2020-house.csv  1976-2020-senate.csv  1976-2020-senate_u1.csv  1976-2022-house.csv  DRA_Share.csv  DRA_Share.numbers  DetailedTurnoutByAgeSexEducation2010-2018.csv  DetailedTurnoutByAgeSexRace2010-2018.csv  EIP_Electoral_Integrity_2016.csv  EIP_Electoral_Integrity_2018.csv  HousePolls538_20200904.csv  StateTurnout.csv  electoral_college.csv  stateTurnout2008to2018.csv  stateTurnout2008to2020.csv
data/election/turnoutSources/: VEPTurnout.numbers  VEPTurnout2008.csv  VEPTurnout2018.csv
data/election/turnoutSources/VEPTurnout/: 2022-Table 1.csv
data/geo/: cd116_2018.topojson  cd116_2018_dense.topojson
src/BlueRipple/Data/Small/: DataFrames.hs  DataSourcePaths.hs  Loaders.hs
test/: Main.hs
