cabal-version: 3.0

name:           blueripple-small-data-sets
version:        0.1.0.0
synopsis:       loaders for small data sets in the BR universe
category:       Data
homepage:       https://github.com/blueripple/small-data-sets#readme
bug-reports:    https://github.com/blueripple/small-data-sets/issues
author:         Adam Conner-Sax
maintainer:     adam@blueripplepolitics.org
copyright:      2024 Adam Conner-Sax
license:        BSD-3-Clause
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/blueripple/small-data-sets

library
  exposed-modules: BlueRipple.Data.Small.DataFrames, BlueRipple.Data.Small.DataSourcePaths
  hs-source-dirs: src
  ghc-options: -Wall
  build-depends:
      blueripple-data-loading
    , Frames >= 0.7 && < 0.8
    , Frames-utils >= 0.3.1
    , Frames-streamly >= 0.2
    , Frames-serialize >= 0.1.0
    , flat >= 0.5 && < 0.7
    , base >=4.12.0 && <5
    , bytestring >= 0.11.0.0 && < 0.13
    , containers >=0.5.0 && <0.8
    , directory >=1.3.3.0 && <1.4.0.0
    , exceptions >=0.10.4 && <0.11
    , foldl >= 1.4 && < 1.5
--    , generics-sop >= 0.5.1.3
    , knit-haskell >= 0.8 && < 0.11
--    , map-reduce-folds >= 0.1.1.1 && < 0.2
--    , mmorph >= 1.1.5
    , mtl >= 2.2 && < 2.4
    , mwc-random >= 0.14 && < 0.16
    , pandoc >=2.9
    , pipes >= 4.2 && < 4.4
    , polysemy >=1.2 && < 1.10
    , polysemy-plugin >= 0.4.5
--    , polysemy-zoo >=0.7.0 && <0.9
    , primitive >= 0.8 && < 0.10
    , relude >= 1.0.0 && < 1.3
    , text >=1.2.3 && < 2.2
    , time >= 1.8 && < 1.14
    , vector >= 0.12 && < 0.14
    , vinyl >= 0.13 && < 0.15
    , streamly >=0.9 && <0.11
    , streamly-core >=0.1.0 && <0.3
    , streamly-bytestring >=0.2.0 && < 0.3

  mixins:  base hiding (Prelude)
         , relude (Relude as Prelude
         , Relude.Extra)
  default-language: Haskell2010
