cabal-version: 3.0

name:           blueripple-small-data-sets
version:        0.1.0.0
synopsis:       loaders for small data sets in the BR universe
category:       Data
homepage:       https://github.com/blueripple/small-data-sets#readme
bug-reports:    https://github.com/blueripple/small-data-sets/issues
author:         Adam Conner-Sax
maintainer:     adam@blueripplepolitics.org
copyright:      2024 Adam Conner-Sax
license:        BSD-3-Clause
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/blueripple/small-data-sets

library
  exposed-modules: BlueRipple.Data.Small.DataFrames
                 , BlueRipple.Data.Small.Loaders
  other-modules: BlueRipple.Data.Small.DataSourcePaths
  hs-source-dirs: src
  ghc-options: -Wall
  build-depends:
      blueripple-data-loading
    , blueripple-post-tools
    , blueripple-data-types
    , Frames >= 0.7 && < 0.8
    , Frames-utils >= 0.3.1
    , Frames-serialize >= 0.1.2 && < 0.2
    , Frames-streamly >= 0.2
    , base >=4.12.0 && <5
    , containers >=0.5.0 && <0.8
    , foldl >= 1.4 && < 1.5
    , knit-haskell >= 0.10.5 && < 0.11
    , lens >= 5.2 && < 6
    , polysemy >= 1.2 && < 1.10
    , polysemy-plugin >= 0.4.5 && < 0.5
    , relude >= 1.0.0 && < 1.3
    , text >=1.2.3 && < 2.2
    , th-env >= 0.1.0.3 && < 0.2
    , streamly >=0.9 && <0.11
    , streamly-core >=0.1.0 && <0.3
    , vinyl >= 0.14 && < 0.15

  mixins:  base hiding (Prelude)
         , relude (Relude as Prelude
         , Relude.Extra)
  default-language: Haskell2010

executable test
  hs-source-dirs: test
  ghc-options: -Wall
  main-is: Main.hs
  build-depends: base
               , blueripple-small-data-sets
               , blueripple-post-tools
               , blueripple-data-loading
               , containers
               , knit-haskell >= 0.10.5 && < 0.11
               , relude >= 1.0.0 && < 1.3

  mixins:  base hiding (Prelude)
         , relude (Relude as Prelude
         , Relude.Extra)
  default-language: Haskell2010
